--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@google/genai": "^1.30.0",
     "uuid": "^13.0.0",
     "recharts": "^3.5.0",
-    "d3": "^7.9.0"
+    "d3": "^7.9.0",
+    "@supabase/supabase-js": "2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
